# Nepal

./: README.md
code/inference/: README.md  README.txt  log.txt
code/inference/cc/: Makefile  cmdline.h  dfnn  main.cc
code/inference/input/: cc-half-144.txt
code/nepal/cc/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.txt  cmdline.h  config.h  config.h.in  config.status  configure  configure.ac  main.cc  nepal  parameter.h
code/nepal/cc/.deps/: nepal-main.Po
code/nepal/cc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
code/nepal/cc/data/: d1ifwa_-d1i2ta_.txt
code/nepal/cc/src/: cmdline.h  main.cc  struct.h
code/parameter/python/: parameter.py
code/pssmcompiler/pseudodb/: pseudodb  pseudodb.phr  pseudodb.pin  pseudodb.psq
code/pssmcompiler/python/: aaa.fa  pssmcompiler.py
dataset/: hoge.txt
dataset/sequence/: scop40_learning.tgz  scop40_test.tgz
